src/test/deca/context/invalid/SansObjet/DeclVar-Plus-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using + operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    float y = 1.5; 
    boolean z = 2 + 1.5; 
}
